backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-backend
spec:
  to:
    kind: Service
    name: todo-backend
  port:
    targetPort: 3000
  tls:
    termination: edge
  wildcardPolicy: None
