frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-frontend
spec:
  to:
    kind: Service
    name: todo-frontend
  port:
    targetPort: 3000
  tls:
    termination: edge
  wildcardPolicy: None
